--- a/frontend/ui/package.json
+++ b/frontend/ui/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
-    "@angular/cdk": "^16.2.8",
+    "@angular/cdk": "^16.2.9",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@videogular/ngx-videogular": "^8.0.0",
+    "angular-auth-oidc-client": "16.0.1",
     "bootstrap": "^5.3.2",
     "ngx-file-drop": "^16.0.0",
     "rxjs": "~7.8.0",
@@ -30,6 +32,7 @@
     "@angular-devkit/build-angular": "^16.2.5",
     "@angular/cli": "^16.2.5",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/core-js": "^2.5.7",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
